--- a/SpringBoot系列/62-商城秒杀/demo/pom.xml
+++ b/SpringBoot系列/62-商城秒杀/demo/pom.xml
@@ -75,10 +75,16 @@
             <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
         <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
-        <dependency>
+        <!--<dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.40</version>
+        </dependency>-->
+
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.0.33</version>
         </dependency>
 
         <!-- AOP依赖 -->
@@ -92,7 +98,7 @@
         <dependency>
             <groupId>org.redisson</groupId>
             <artifactId>redisson-spring-boot-starter</artifactId>
-            <version>3.21.1</version>
+            <version>3.27.2</version>
         </dependency>
 
     </dependencies>
