--- a/SpringBoot系列/62-商城秒杀/demo/src/main/resources/application.yml
+++ b/SpringBoot系列/62-商城秒杀/demo/src/main/resources/application.yml
@@ -7,16 +7,16 @@ spring:
 
   # 配置数据源
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/demo?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF8&zeroDateTimeBehavior=convertToNull&useSSL=false # MySQL在高版本需要指明是否进行SSL连接 解决则加上 &useSSL=false
+    url: jdbc:mysql://127.0.0.1:3306/java-demo?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF8&zeroDateTimeBehavior=convertToNull&useSSL=false # MySQL在高版本需要指明是否进行SSL连接 解决则加上 &useSSL=false
     username: root
-    password: root
+    password: 123456
     platform: mysql
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
   # Redis数据源配置
   redis:
     # Redis数据库索引（默认为0）
-    database: 0
+    database: 1
     # Redis服务器地址
     host: 127.0.0.1
     # Redis服务器连接端口
